# train_analysis

./: GDP_Capita.csv  TransferArbeit.ipynb  km_railways.csv  main.py  population.csv  pyproject.toml  railways-passengers-km.csv
